--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Auto Filter Bot V3",
+    "name": "Auto-Filter-Bot-v1",
     "description": "A greater auto filter bot with features like IMDb support,inline mode,broadcast feature etc..",
     "logo":"https://telegra.ph/file/ad9cb7fc42ec0e5e6d006.jpg",
     "keywords": [
